[gd_scene load_steps=14 format=3 uid="uid://6o3475xagob5"]

[ext_resource type="StyleBox" uid="uid://dmcuiw1aqxocj" path="res://resources/theme/upgrade_cards_styleboxes/upgrade_card_common.tres" id="2_34nwv"]
[ext_resource type="Script" uid="uid://blalqtui3vl3m" path="res://scenes/ui/meta_upgrade_card.gd" id="3_j8h27"]
[ext_resource type="Texture2D" uid="uid://c4e54j4adv3qn" path="res://scenes/game_object/experience_vial/experience_vial.png" id="6_egsc2"]
[ext_resource type="Texture2D" uid="uid://vel7jw8cjf4l" path="res://assets/ui/expbar_background.png" id="7_v8h0w"]
[ext_resource type="Texture2D" uid="uid://jvncb7vxtci0" path="res://assets/ui/expbar_bar.png" id="8_ffre1"]
[ext_resource type="PackedScene" uid="uid://d4ir4dl17kn0w" path="res://scenes/ui/RarityTag.tscn" id="14_ll2wf"]
[ext_resource type="FontFile" uid="uid://bwmrxu3day8yq" path="res://resources/theme/fonts/TinyUnicode.ttf" id="15_20rsj"]

[sub_resource type="Animation" id="Animation_jntrk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_kvqqb"]
resource_name = "purchase"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3),
"transitions": PackedFloat32Array(1, 2.07053, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.139626, 0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kvqqb"]
_data = {
&"RESET": SubResource("Animation_jntrk"),
&"purchase": SubResource("Animation_kvqqb")
}

[sub_resource type="Animation" id="Animation_uhqci"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_c4j7u"]
resource_name = "in"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.15, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(1.3, 1.3), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rxqlh"]
_data = {
&"RESET": SubResource("Animation_uhqci"),
&"in": SubResource("Animation_c4j7u")
}

[node name="MetaUpgradeCard" type="PanelContainer" groups=["meta_upgrade_card"]]
light_mask = 0
custom_minimum_size = Vector2(140, 160)
offset_left = -0.0875422
offset_top = 0.087447
offset_right = 139.912
offset_bottom = 160.087
pivot_offset = Vector2(80.0002, 80)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("2_34nwv")
script = ExtResource("3_j8h27")

[node name="InteractionAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_kvqqb")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_rxqlh")
}
autoplay = "in"

[node name="MarginContainer" type="MarginContainer" parent="."]
light_mask = 0
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 9

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 6

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
light_mask = 0
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "Long name here"
horizontal_alignment = 1

[node name="RarityTag" parent="MarginContainer/VBoxContainer" instance=ExtResource("14_ll2wf")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
visible = false
light_mask = 0
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_type_variation = &"RarityTagPanelContainer"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
light_mask = 0
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("15_20rsj")
theme_override_font_sizes/font_size = 16
text = "Some large description is going over here"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("6_egsc2")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 4

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "500/2000"

[node name="Margin container" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ExpProgressBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer/Margin container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
max_value = 1.0
step = 0.01
value = 0.03
texture_under = ExtResource("7_v8h0w")
texture_progress = ExtResource("8_ffre1")

[node name="PurchaseButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
light_mask = 0
layout_mode = 2
size_flags_vertical = 0
text = "Purchase"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
